Cleanup and finish part 1.

--- a/part1.html
+++ b/part1.html
@@ -70,7 +70,7 @@ img {
 <p>The exponential distribution can be simulated in R with <strong><em>rexp(n, lambda)</em></strong> where <strong><em>lambda</em></strong> is the rate parameter. The mean of exponential distribution is <strong><em>1/lambda</em></strong> and the standard deviation is also <strong><em>1/lambda</em></strong>.</p>
 <p>Lambda will be set to 0.2 for all of the simulations.</p>
 <p>We will investigate the distribution of averages of 40 exponentials. We will need to do a thousand simulations.</p>
-<p>The goal is to illustrate via simulation and associated explanatory text the properties of the distribution of the mean of 40 exponentials. You should:</p>
+<p>The goal is to illustrate via simulation and associated explanatory text the properties of the distribution of the mean of 40 exponentials. We will:</p>
 <ol style="list-style-type: decimal">
 <li><p>Show the sample mean and compare it to the theoretical mean of the distribution.</p></li>
 <li><p>Show how variable the sample is (via variance) and compare it to the theoretical variance of the distribution.</p></li>
